[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "challenge01"

[[bin]]
name = "challenge02"

[[bin]]
name = "challenge03"

[[bin]]
name = "challenge04"

[[bin]]
name = "challenge05"

[[bin]]
name = "challenge06"

[[bin]]
name = "challenge07"

[dependencies]
aes = "0.8.2"
hex = "0.4.3"
indoc = "1.0"
radix64 = "0.6.2"
rust-crypto = "0.2.36"
