[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "challenge01"

[[bin]]
name = "challenge02"

[[bin]]
name = "challenge03"

[[bin]]
name = "challenge04"

[[bin]]
name = "challenge05"

[[bin]]
name = "challenge06"

[[bin]]
name = "challenge07"

[[bin]]
name = "challenge08"

[[bin]]
name = "challenge09"

[[bin]]
name = "challenge10"

[[bin]]
name = "challenge11"

[[bin]]
name = "challenge12"

[[bin]]
name = "challenge13"

[[bin]]
name = "challenge14"

[[bin]]
name = "challenge15"

[[bin]]
name = "challenge16"

[[bin]]
name = "challenge17"

[[bin]]
name = "challenge18"

[[bin]]
name = "challenge19"

[[bin]]
name = "challenge20"

[[bin]]
name = "challenge21"

[[bin]]
name = "challenge22"

[[bin]]
name = "challenge23"

[[bin]]
name = "challenge24"

[[bin]]
name = "challenge25"

[[bin]]
name = "challenge26"

[[bin]]
name = "challenge27"

[dependencies]
aes = "0.8.2"
crossterm = "0.25.0"
hex = "0.4.3"
indoc = "1.0"
lazy_static = "1.4.0"
radix64 = "0.6.2"
rand = "0.8.5"
rust-crypto = "0.2.36"
